# hf-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/models/: ft_transformer.yaml  lightgbm.yaml  logistic_regression.yaml  mlp.yaml  tabnet.yaml  xgboost.yaml
notebooks/: 00_quickstart.ipynb
results/metrics/: ft_transformer_seed42_fairness_age_group.csv  ft_transformer_seed42_fairness_race.csv  ft_transformer_seed42_fairness_sex.csv  ft_transformer_seed42_metrics.json  ft_transformer_seed42_quick.json  lightgbm_seed42_fairness_age_group.csv  lightgbm_seed42_fairness_race.csv  lightgbm_seed42_fairness_sex.csv  lightgbm_seed42_metrics.json  lightgbm_seed42_quick.json  logistic_regression_seed42_fairness_age_group.csv  logistic_regression_seed42_fairness_race.csv  logistic_regression_seed42_fairness_sex.csv  logistic_regression_seed42_metrics.json  logistic_regression_seed42_quick.json  mlp_seed42_fairness_age_group.csv  mlp_seed42_fairness_race.csv  mlp_seed42_fairness_sex.csv  mlp_seed42_metrics.json  mlp_seed42_quick.json  summary_mean_ci.csv  tabnet_seed42_fairness_age_group.csv  tabnet_seed42_fairness_race.csv  tabnet_seed42_fairness_sex.csv  tabnet_seed42_metrics.json  tabnet_seed42_quick.json  xgboost_seed42_fairness_age_group.csv  xgboost_seed42_fairness_race.csv  xgboost_seed42_fairness_sex.csv  xgboost_seed42_quick.json  (+1 more)
scripts/: aggregate_results.py  evaluate.py  make_demo_data.py  preprocess.py  run_all.py  train_model.py
sql/: mimic_iv_hf_cohort.sql
tests/: test_demo_pipeline.py  test_metrics.py  test_splits.py
(+28 files in other folders)
