[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hfbench"
version = "0.1.0"
description = "Benchmark: tabular deep learning vs GBTs for 30-day HF readmission"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "HF-Bench Authors"}
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "scipy>=1.11",
    "optuna>=3.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
tabnet = ["pytorch-tabnet>=4.1"]
dev = ["pytest>=7.4", "black", "isort", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
